<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgViewTiguan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/now_model_tiguan2"
            android:layout_marginTop="7dp" />

        <TextView
            android:id="@+id/txtViewTiguan_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgViewTiguan"
            android:text="Volkswagen Tiguan"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginBottom="7dp" />

        <TextView
            android:id="@+id/txtViewTiguan_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="    Kомпактный автомобиль немецкого автоконцерна Volkswagen, находящийся в производстве с 1975 года. Выпускался с кузовами типа хэтчбек (Polo, Polo Coupe), седан (Derby, Polo Classic, Polo Sedan), универсал (Polo Variant) и грузопассажирский фургон (Caddy). В 2010 году был признан автомобилем года в Европе и в мире. Polo стабильно входит в десятку самых продаваемых автомобилей Европы."
            android:layout_below="@id/txtViewTiguan_1"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/txtViewTiguan_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtViewTiguan_2"
            android:gravity="center"
            android:text="@string/tiguan_characteristic1"
            android:textSize="18sp"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/txtViewTiguan_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtViewTiguan_3"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/tiguan_characteristic2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtViewTiguan_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiguan_characteristic3"
            android:layout_below="@id/txtViewTiguan_4"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/txtViewTiguan_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtViewTiguan_5"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/tiguan_characteristic4"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtViewTiguan_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiguan_characteristic5"
            android:layout_below="@id/txtViewTiguan_6"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/txtViewTiguan_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtViewTiguan_7"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/tiguan_characteristic6"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtViewTiguan_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiguan_characteristic7"
            android:layout_below="@id/txtViewTiguan_8"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/txtViewTiguan_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtViewTiguan_9"
            android:gravity="center"
            android:text="@string/tiguan_characteristic8"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtViewTiguan_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiguan_characteristic9"
            android:layout_below="@id/txtViewTiguan_10"
            android:layout_marginLeft="5dp" />
    </RelativeLayout>
</ScrollView>